--- a/footer.html
+++ b/footer.html
@@ -18,7 +18,7 @@
             <p class="text-center">Somos una clínica destinada a la recuperación, mantención y preservación del estado de salud de las personas. <br>
             Contamos con un equipo altamente capacitado para brindarte la mejor atencion personalizada. <br>
             Atendemos Obras Sociales y consultas particulares.</p>
-            <center><button class="btn btn-block btn-outline-light">Registrarme</button></center>
+            <center><button class="btn btn-block btn-outline-light">Pedir un turno</button></center>
             <hr>
         </div>
 
