--- a/footer.html
+++ b/footer.html
@@ -16,7 +16,7 @@
         <div class="mt-3 ">
             <h3 class="text-center fw-bold">CLÍNICA ROLLING</h3>
             <p class="text-center">Somos una clínica destinada a la recuperación, mantención y preservación del estado de salud de las personas. <br>
-            Contamos con un equipo altamente capacitado para brindarte la mejor atencion personalizada. <br>
+            Contamos con un equipo altamente capacitado para brindarte la mejor atención personalizada. <br>
             Atendemos Obras Sociales y consultas particulares.</p>
             <center><button class="btn btn-block btn-outline-light">Pedir un turno</button></center>
             <hr>
