--- a/footer.html
+++ b/footer.html
@@ -10,8 +10,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="container-fluid  text-white p-3" style="font-family: 'Poppins', sans-serif; background: #089BD3;
-    background: linear-gradient(to right, #677E2A, #089BD3, #089BD3);">
+    <div class="container-fluid  text-white p-3" style="font-family: 'Poppins', sans-serif; background: #8DE5D8;
+    background: linear-gradient(to right, #117C6F, #8DE5D8, #8DE5D8);">
 
         <div class="mt-3 ">
             <h3 class="text-center fw-bold">CLÍNICA ROLLING</h3>
